fix content alignment

--- a/src/block/icon-list/style.scss
+++ b/src/block/icon-list/style.scss
@@ -1,5 +1,7 @@
 // Important, we can't use flex since it causes issues with columns.
 .stk-block-icon-list {
+	display: flex;
+
 	:is(ul, ol) {
 		width: fit-content;
 		text-align: start;
